k8s_manifests/aggregate_depoloyment_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregate-api
spec:
  selector:
    matchLabels:
      name: aggregate-api-deployment
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        name: aggregate-api-deployment
    spec:
      containers:
      - name: aggregate-api
        image: aggregate-api
        # フルパスの場合→　542844532577.dkr.ecr.ap-northeast-1.amazonaws.com/aggregate-api@sha256:ead7135f8b75f7702cd8b6fffd31926a4221bec4fda205aed3863b45501cca67
        #ここはタグ名なし
        ports:
        - containerPort: 80
-----
apiVersion: v1
kind: Service
metadata:
  name: aggregate-api-service
spec:
  ports:
    - port: 80
  selector:
    name: aggregate-api-deployment
