k8s_manifests/aggregate_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregate-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /542844532577.dkr.ecr.ap-northeast-1.amazonaws.com/
        pathType: Prefix
        backend:
          service:
            name: aggregate-api-service
            port:
              number: 80
